apps/llama-cpp/base/sts-local.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-cpp-local
  namespace: shikanime
spec:
  serviceName: llama-cpp-local
  replicas: 1
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  volumeClaimTemplates:
    - metadata:
        name: cache-huggingface
      spec:
        resources:
          requests:
            storage: 512Gi
        storageClassName: nishir-scratch
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-mesa
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-scratch
        accessModes:
          - ReadWriteOncePod
    - metadata:
        name: cache-radv
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: nishir-scratch
        accessModes:
          - ReadWriteOncePod
  selector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp-local
      app.kubernetes.io/name: llama-cpp
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: llama-cpp-local
        app.kubernetes.io/name: llama-cpp
    spec:
      securityContext:
        fsGroup: 65532
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: feature.node.kubernetes.io/pci-0380_1002.present
                    operator: In
                    values:
                      - "true"
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app.kubernetes.io/name: llama-cpp
              topologyKey: kubernetes.io/hostname
      containers:
        - name: llama-cpp
          image: llama-cpp
          command:
            - llama-server
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
          ports:
            - name: http
              containerPort: 9931
          livenessProbe:
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 120
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: cache-huggingface
              mountPath: /home/llama.cpp/.cache/huggingface
            - name: cache-mesa
              mountPath: /home/llama.cpp/.cache/mesa_shader_cache
            - name: cache-radv
              mountPath: /home/llama.cpp/.cache/radv_builtin_shaders
            - name: models-preset
              mountPath: /etc/llama-cpp/preset
              readOnly: true
            - name: dev-kfd
              mountPath: /dev/kfd
            - name: dev-dri
              mountPath: /dev/dri
      volumes:
        - name: models-preset
          configMap:
            name: llama-cpp-local-models-preset
        - name: dev-kfd
          hostPath:
            type: CharDevice
            path: /dev/kfd
        - name: dev-dri
          hostPath:
            type: Directory
            path: /dev/dri
