apps/llama-cpp/base/persistence.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: llama-cpp-timeout
  namespace: shikanime
spec:
  targetRefs:
    - name: llama-cpp
      group: gateway.networking.k8s.io
      kind: HTTPRoute
  timeout:
    http:
      requestTimeout: 30m
