apps/llama-cpp/base/netpol-local.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: llama-cpp-local
spec:
  ingress: []
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: llama-cpp-local
      app.kubernetes.io/name: llama-cpp
  policyTypes:
    - Ingress
